--- a/SportSrore/Views/Product/List.cshtml
+++ b/SportSrore/Views/Product/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProductsListViewModel //IEnumerable<Product>
+﻿@model ProductsListViewModel 
 
     @foreach (var p in Model.Products) 
     {
@@ -6,5 +6,6 @@
     }
     <div page-model="@Model.PagingInfo" page-action="List"
     page-classes-enabled="true" page-class="btn" page-class-normal="btn-secondary"
-    page-class-selected="btn-primary" class="btn-group float-end m-1">
+    page-class-selected="btn-primary" page-url-category="@Model.CurrentCategory"
+    class="btn-group float-end m-1">
     </div>
