--- a/SportSrore/Views/_ViewImports.cshtml
+++ b/SportSrore/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SportStore.Models
-@using SportSrore.Models.ViewModels;
-
+@using SportSrore.Models.ViewModels
+@using SportSrore.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper SportSrore.Infrastructure.*, SportSrore
 
