--- a/SportSrore/Views/Shared/ProductSummary.cshtml
+++ b/SportSrore/Views/Shared/ProductSummary.cshtml
@@ -19,7 +19,7 @@
             <span class="card-text p-1">
                 @Model.Description
                 <button type="submit"
-                    class="btn btn-success btn-sm float-end" style="float:right">
+                    class="btn btn-success btn-sm float-start" style="float:right">
                 Add To Cart
                 </button>
             </span>
