--- a/SportSrore/Views/Shared/_Layout.cshtml
+++ b/SportSrore/Views/Shared/_Layout.cshtml
@@ -1,15 +1,23 @@
-﻿<!DOCTYPE html>
+﻿@using SportSrore.Components
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" 
-            asp-href-include="/lib/bootstrap/**/*.min.css"
-            asp-href-exclude="**/*-reboot*,**/*-grid*"/>
+              asp-href-include="/lib/bootstrap/**/*.min.css"
+              asp-href-exclude="**/*-reboot*,**/*-grid*"/>
+        <link rel="stylesheet" asp-href-include="/lib/font-awesome/css/*.css"/>
+        <link rel="stylesheet" href="css/Style.css"/>
         <title>SportsStore</title>
     </head>
     <body>
         <div class="navbar navbar-expand-md bg-primary" role="navigation"> 
-            <a class="navbar-brand" href="#">SPORTS STORE</a>
+            <div class="row">
+                <a class="col navbar-brand" href="#">SPORTS STORE</a>
+                <div class="col-4 text-start">
+                    @await Component.InvokeAsync("CartSummary")
+                </div>
+            </div>
         </div>
         <div class="row m-1 p-1">
             <div id="categories" class="col-3">
