--- a/SportSrore/Views/Admin/Index.cshtml
+++ b/SportSrore/Views/Admin/Index.cshtml
@@ -19,7 +19,7 @@
             <td>@item.Name</td>
             <td class="text-start">@item.Price.ToString("c")</td>
             <td class="text-center">
-                <form asp-action="Delite" method="post">
+                <form asp-action="Delete" method="post">
                     <a asp-action="Edit" class="btn btn-sm btn-warning"
                        asp-route-productId="@item.ProductID">
                         Edit
